validated duplicates on medications, labs vl and ldl entry,greencard complaints dates and hivaddendem current regimen and tca more than 4 months error

--- a/omod/src/main/webapp/resources/htmlforms/labResults.html
+++ b/omod/src/main/webapp/resources/htmlforms/labResults.html
@@ -34,8 +34,9 @@
          	}
         }
 		function getLatedtVlOrder(){
-			var testOrderDate=new Date("<lookup expression="fn.latestObs(1271).obsDatetime"/>");
-			var testOrderVlConcept=<lookup expression="fn.latestObs(1271).valueCoded"/>
+
+			var testOrderDate=new Date("<lookup expression="fn.latestObs(1271).obsDatetime"/>")
+			var testOrderVlConcept= "<lookup expression="fn.latestObs(1271).valueCoded"/>"
 
 			if (testOrderVlConcept == 856) {
 			//alert(testOrderVlConcept)
