validated hiv confirmatory test - added question patient has done reconfirmatory test, concept id 164401

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivConfirmation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivConfirmation.html
@@ -64,9 +64,9 @@
                 <tr>
                     <td>Patient has done HIV Reconfirmatory Test? &#160;&#160;&#160;&#160;</td>
                     <td>
-                        <obs id="confirmatory-test" conceptId="159427AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
-                             style="radio" answerLabels="Yes,No"/>
+                        <obs id="confirmatory-test" conceptId="164401AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                             style="radio" answerLabels="Yes,No,Unknown"/>
                     </td>
                 </tr>
             </table>
