--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -1416,7 +1416,7 @@ Green Card follow-up visit form
                 <legend>TB Screening</legend>
 
 
-                <table>
+                <table cellspacing="10" >
                     <tr>
                         <th  style="color: #888" >Current Status </th>
                         <th  style="color: #888" >Recent </th>
@@ -1426,49 +1426,32 @@ Green Card follow-up visit form
                             Patient on anti-TB Drugs? &#160;<input type="radio" name="on-anti-tb-drugs" class="on-anti-tb-drugs" value="1065"  /> Yes
                             <input type="radio" class="on-anti-tb-drugs" name="on-anti-tb-drugs" value="1066"/> No
                         </td>
-                    </tr>
-                    <tr></tr>
-
-                        Patient currently on IPT? &#160;&#160;<input type="radio" name="on-ipt" class="on-ipt" value="1065"/> Yes
-                        <input type="radio" name="on-ipt" class="on-ipt" value="1066"/> No
-                    </td><td>
-                        <div id="ever-on-ipt" >
-                            Patient ever on IPT? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <input type="radio" name="patient_ever_on_ipt" class="ever-on-ipt" value="1065"/> Yes
-                            <input type="radio" class="ever-on-ipt" name="patient_ever_on_ipt" value="1066"/> No
-
-                        </div>
-                    </td>
+                        <td>
+                            <span class="value"><recentObs conceptId="1111AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                        </td>
                     </tr>
                     <tr>
                         <td>
-                            <span class="value"><recentObs conceptId="1111AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
-                        </td>
+                        Patient currently on IPT? &#160;&#160;<input type="radio" name="on-ipt" class="on-ipt" value="1065"/> Yes
+                        <input type="radio" name="on-ipt" class="on-ipt" value="1066"/> No
+                       </td>
                         <td>
-                            <span class="value"><recentObs conceptId="1111AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                            <span class="value"><recentObs conceptId="1265AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
                         </td>
+                    </tr>
+                    <tr>
                         <td>
-                            <span class="value"><recentObs conceptId="1111AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
-                        </td>
+                          <div id="ever-on-ipt" >
+                            Patient ever on IPT? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <input type="radio" name="patient_ever_on_ipt" class="ever-on-ipt" value="1065"/> Yes
+                            <input type="radio" class="ever-on-ipt" name="patient_ever_on_ipt" value="1066"/> No
 
+                          </div>
+                      </td>
+                        <td>
+                            <span class="value"><recentObs conceptId="1265AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                        </td>
                     </tr>
                 </table>
-
-                <!--<div>-->
-                   <!--Patient on anti-TB Drugs? &#160;<input type="radio" name="on-anti-tb-drugs" class="on-anti-tb-drugs" value="1065"  /> Yes-->
-                    <!--<input type="radio" class="on-anti-tb-drugs" name="on-anti-tb-drugs" value="1066"/> No-->
-                <!--</div>-->
-                <!--<div>-->
-                    <!--Patient currently on IPT? &#160;&#160;<input type="radio" name="on-ipt" class="on-ipt" value="1065"/> Yes-->
-                    <!--<input type="radio" name="on-ipt" class="on-ipt" value="1066"/> No-->
-                <!--</div>-->
-                <!--<div id="ever-on-ipt" >-->
-                    <!--Patient ever on IPT? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <input type="radio" name="patient_ever_on_ipt" class="ever-on-ipt" value="1065"/> Yes-->
-                    <!--<input type="radio" class="ever-on-ipt" name="patient_ever_on_ipt" value="1066"/> No-->
-
-                <!--</div>-->
-
-
-
                 <fieldset id="tb-screening-tab">
                     <legend>Screening Questions</legend>
                     <table id="screening-questions">
