Validated greencard made tb and review of systems mandatory fields

--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -195,7 +195,7 @@ Green Card follow-up visit form
         }
         var systemsReviewSelected = function() {
             var val = jq(this).val();
-            if (val == 1066){
+            if (val == 1116){
                 jq("#tbl-systems-review").hide();
 
             }else {
@@ -231,14 +231,13 @@ Green Card follow-up visit form
             everOnIPTSelected = null;
             patientCurrentlyOnIPT = null;
             if(val == 1066) {
-                jq('input[type=radio].on-ipt').prop("disabled", false);
+                jq('#on-ipt input').prop("disabled", false);
             } else {
                 jq('input[type=radio].on-ipt').prop("disabled", true);
                 jq('input[type=radio].on-ipt').prop("checked", false);
                 jq("#tb-screening-result").hide();
                 jq("#tb-screening-tab").hide();
-                jq("#ever-on-ipt").hide();
-                clearRadios(jq("#ever-on-ipt"));
+                jq("#tbl-ever-on-ipt").hide();
                 actionTakenTab.hide();
                 clearRadios(actionTakenTab);
                 iptClientWorkupTab.hide()
@@ -247,7 +246,7 @@ Green Card follow-up visit form
                 clearRadios(iptFollowup);
                 tbScreeningQuestionsTab.hide();
                 clearRadios(tbScreeningQuestionsTab);
-               iptInitiationTab.hide();
+                iptInitiationTab.hide();
 
             }
         }
@@ -264,7 +263,7 @@ Green Card follow-up visit form
             var tbScreeningResult = jq("#tb-screening-result");
             if(val == 1066) {
 
-                jq("#ever-on-ipt").show();
+                jq("#tbl-ever-on-ipt").show();
                 jq("#ipt-uptake").hide();
                 iptFollowup.hide();
                 actionTakenTab.hide();
@@ -278,8 +277,7 @@ Green Card follow-up visit form
                 clearRadios(tbScreeningResult);
 
             } else {
-                jq("#ever-on-ipt").hide();
-                clearRadios(jq("#ever-on-ipt"));
+                jq("#tbl-ever-on-ipt").hide();
                 jq("#ipt-followup").show();
                 tbScreeningQuestionsTab.show();
                 jq("#tb-screening-result").show();
@@ -689,9 +687,9 @@ Green Card follow-up visit form
          jq("#nutritional-status input[type=radio]").prop("checked", false);
          jq("#general-exam-findings :input[type=checkbox]").prop("checked",false);
          jq('#person-present input').click(onPersonPresentChange);
-         jq('input[type=radio].on-ipt').prop("disabled", true);
-         jq('input[type=radio].on-ipt').prop("checked", false);
-         jq('input[type=radio].on-anti-tb-drugs').prop("checked", false);
+         jq('#on-ipt input').prop("disabled", true);
+         //jq('input[type=radio].on-ipt').prop("checked", false);
+         //jq('input[type=radio].on-anti-tb-drugs').prop("checked", false);
          jq("#tbl-start-antiTb").hide();
          jq("#ipt-uptake").hide();
          jq("#tb-screening-result").hide();
@@ -702,7 +700,7 @@ Green Card follow-up visit form
          jq(".nav-links").hide();
          jq(".show-nav-links").text("Click to Show/Hide Form Sections");
          jq("#tb-screening-tab").hide();
-         jq("#ever-on-ipt").hide();
+         jq("#tbl-ever-on-ipt").hide();
          //IPT OUTCOME
          jq("#tbl-ipt-outcome").hide();
          jq("#reason-for-discontinuation").hide();
@@ -721,9 +719,9 @@ Green Card follow-up visit form
 
          //Event Handlers
          jq("#lmp-date :input[type=text]").change(onLmpChange);
-         jq('input[type=radio].on-anti-tb-drugs').change(onAntiTbDrugs);
-         jq('input[type=radio].on-ipt').change(onIPT);
-         jq("input[type=radio].ever-on-ipt").change(everOnIPT);
+         jq("#on-anti-tb-drugs :input[type=radio]").change(onAntiTbDrugs);
+         jq("#on-ipt :input[type=radio]").change(onIPT);
+         jq("#ever-on-ipt :input[type=radio]").change(everOnIPT);
          //sti notification
          //getField('screened-sti.value').change(screenedStiSelected);
          jq("#screened-sti :input[type=radio]").change(screenedStiSelected);
@@ -742,7 +740,7 @@ Green Card follow-up visit form
         // getField('complaint-date.value').change(complaintDateInput);
          jq('input[type=radio].adverse-reactions').change(adverseReactionSelected);
          jq('input[type=radio].known-allergies').change(knownAllergiesSelected);
-         jq('input[type=radio].systems-review').change(systemsReviewSelected);
+         jq('#systems-review :input[type=radio]').change(systemsReviewSelected);
          jq('input[type=radio].chronic-illness').change(chronicIllnessesSelected);
          jq('input[type=radio].population-type').change(populationTypeSelected);
 
@@ -872,6 +870,9 @@ Green Card follow-up visit form
                 var fpMethodsChecked = jq("#onFp input:checkbox:checked");
                 var notOnfpMethodsChecked = jq("#notOnFp input:checkbox:checked");
                 var onfpMethodChecked = getField("fplanning.value").val();
+                var systemsReview = getValue('systems-review.value');
+                var onAntiTbDrugs = getValue('on-anti-tb-drugs.value');
+                var onIpt = getValue('on-ipt.value');
 
                 //Must have a Return Visit Date which should be greater than encounter date
                 if (tca_date =="") {
@@ -909,6 +910,21 @@ Green Card follow-up visit form
                 if(onfpMethodChecked ==160652 &amp;&amp; notOnfpMethodsChecked.length == 0 ){
                     getField('notOnfp-error.error').html('Please add atleast one reason for not using family planning.').show();
                     jq('#fp-details').show();
+                    return false;
+                }
+                //Systems review is mandatory field
+                if (systemsReview == false) {
+                    getField('systems-review.error').html('Please record systems review findings').show();
+                    return false;
+                }
+                //TB Screening is mandatory field
+                if (onAntiTbDrugs == false) {
+                    getField('on-anti-tb-drugs.error').html('Please indicate whether on Anti-TB drugs').show();
+                    return false;
+                }
+                //IPT Screening is mandatory field
+                if (onAntiTbDrugs !=1065 &amp;&amp; onIpt == false) {
+                    getField('on-ipt.error').html('Please indicate whether currently on IPT').show();
                     return false;
                 }
                 return true;
@@ -1421,8 +1437,13 @@ Green Card follow-up visit form
                     </tr>
                     <tr>
                         <td>
-                            Patient on anti-TB Drugs? &#160;<input type="radio" name="on-anti-tb-drugs" class="on-anti-tb-drugs" value="1065"  /> Yes
-                            <input type="radio" class="on-anti-tb-drugs" name="on-anti-tb-drugs" value="1066"/> No
+                            Patient on anti-TB Drugs? &#160;
+                            <obs conceptId="1110AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 answerLabel="Yes,No"
+                                 style="radio"
+                                 id="on-anti-tb-drugs" />
+                            <br/>
                         </td>
                         <td>
                             <span class="value"><recentObs conceptId="1111AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
@@ -1430,26 +1451,36 @@ Green Card follow-up visit form
                     </tr>
                     <tr>
                         <td>
-                        Patient currently on IPT? &#160;&#160;<input type="radio" name="on-ipt" class="on-ipt" value="1065"/> Yes
-                        <input type="radio" name="on-ipt" class="on-ipt" value="1066"/> No
+                            Patient currently on IPT? &#160;&#160;
+                            <obs conceptId="1110AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 answerLabel="Yes,No"
+                                 style="radio"
+                                 id="on-ipt" />
+                            <br/>
                        </td>
                         <td>
                             <span class="value"><recentObs conceptId="1265AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
                         </td>
                     </tr>
+                </table>
+                <table id="tbl-ever-on-ipt">
                     <tr>
                         <td>
-                          <div id="ever-on-ipt" >
-                            Patient ever on IPT? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; <input type="radio" name="patient_ever_on_ipt" class="ever-on-ipt" value="1065"/> Yes
-                            <input type="radio" class="ever-on-ipt" name="patient_ever_on_ipt" value="1066"/> No
-
-                          </div>
-                      </td>
+                            Patient ever on IPT? &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
+                            <obs conceptId="1681AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 answerConceptIds="1065AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1066AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 answerLabel="Yes,No"
+                                 style="radio"
+                                 id="ever-on-ipt" />
+                            <br/>
+                          </td>
                         <td>
                             <span class="value"><recentObs conceptId="1265AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
                         </td>
                     </tr>
                 </table>
+                <br/>
                 <fieldset id="tb-screening-tab">
                     <legend>Screening Questions</legend>
                     <table id="screening-questions">
@@ -2380,11 +2411,20 @@ Green Card follow-up visit form
             <!--System Examination-->
             <fieldset>
                 <legend>System Examination</legend>
-                <div>
-                    Any abnormal finding(s) on system review?  &#160;&#160;&#160;&#160; <input type="radio" name="systems-review" class="systems-review" value="1065"/> Yes
-                    <input type="radio" name="systems-review" class="systems-review" value="1066"/> No
-                </div>
-                <br />
+               <table>
+                   <tr>
+                       <td>
+                       Any abnormal finding(s) on system review?  &#160;&#160;&#160;&#160;
+                   </td>
+                       <td><obs
+                                   conceptId="159615AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                   answerConceptIds="1115AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1116AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                   answerLabels="Yes,No"
+                                   style="radio" id="systems-review" />
+                       </td>
+                   </tr>
+               </table>
+                 <br />
                 <table style="width: 70%;" border="0" id="tbl-systems-review">
                     <tr>
                         <th align="left">No. </th>
