--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivConfirmation.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivConfirmation.html
@@ -87,7 +87,7 @@
                 <tr>
                     <td>Reconfirmatory Test Date : &#160;&#160;&#160;&#160;&#160; </td>
                     <td>
-                        <obs id="confirmatory-test-date" conceptId="164400AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="false" required ="true"/>
+                        <obs id="confirmatory-test-date" conceptId="164400AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="false"/>
                     </td>
                 </tr>
             </table>
